# ai_resume_builder

./: .dockerignore  .gitignore  Dockerfile  PROJECT_PLAN.md  docker-compose.yml  main.py  requirements.txt
app/: document_processor.py  main.py  pyproject.toml  requirements.txt  tester.py
app/parsers/: resume.py  skills.py
app/rag/: pipeline.py
app/services/: env_checker.py
