[project]
name = "ai-resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-ollama>=1.1.0",
    "llama-index>=0.14.23",
]
