[project]
name = "ai-resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-ollama>=1.1.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-vector-stores-postgres>=0.8.1",
    "numpy>=2.5.1",
    "uvicorn>=0.50.2",
    "watchdog>=6.0.0",
]
